# Episteme

./: .gitignore  README.md  capacitor.config.json  description.md  index.html  package-lock.json  package.json  pyproject.toml
Design/: app.jsx  components.jsx  data.jsx  index.html  screens.jsx
backend/: __init__.py
backend/app/: __init__.py  config.py  database.py  exports.py  main.py  models.py  repository.py
desktop/: README.md
desktop/electron/: entitlements.mac.plist  main.cjs
src/: animation.js  api.js  constants.js  main.jsx  styles.css
src/sync/: cloudkitRecords.js
tests/: test_api_import.py  test_exports.py  test_repository.py
