[project]
name = "episteme-backend"
version = "0.1.0"
description = "FastAPI backend for the Curiosity-to-Research Studio."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=7.0,<9.0",
]

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["data*", "exports*", "tests*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
